--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "pm2 start server.js --interpreter node"
+    "serve": "node server.js"
   },
   "keywords": [],
   "author": "",
